--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
 
-@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
 * {
     box-sizing: border-box;
-    font-family: 'Source Code Pro', monospace;
+    font-family: 'Questrial', sans-serif;
   } 
 div{
     border: 1px dashed  whitesmoke;
 }
 ul li  {
+    float: left;
+    margin-top: 10px;
     background-attachment: fixed;
-    background-color: black;
-    color: gray;
+    background-color: white;
+    color: black;
+    font-weight: bold;
     display:inline;
     padding: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
+    margin-left: 30px;
+    margin-right: 25px;
     list-style: none;
     
 }
@@ -22,4 +25,38 @@ div img{
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;}
+    width: 50%;
+}
+#imgH{
+    margin-top: 1px;
+    float: left;
+    height: 70px;
+    width: 150px;
+    margin-right: 70px;
+    margin-left: 70px;
+
+}
+#parag{
+    overflow: scroll; 
+    height:90%;
+    width: 90%;
+
+    
+}
+.img1{
+    /* display: inline;
+    margin-left: 20%;
+    margin-right:20% ; */
+
+}
+#btn{
+    background-color: lightpink;
+}
+#p2{
+    text-align: center;
+    margin-top: 50px;
+    margin-left: 25%;
+    overflow: scroll;
+    margin-right: 25%;
+
+}
