--- a/style.css
+++ b/style.css
@@ -50,13 +50,12 @@ div img{
 
 }
 #btn{
-    background-color: lightpink;
+    background-color: lightcyan;
 }
 #p2{
     text-align: center;
     margin-top: 50px;
     margin-left: 25%;
-
     margin-right: 25%;
 
 }
